--- a/CSS/pariencia.css
+++ b/CSS/pariencia.css
@@ -65,7 +65,7 @@
                             .banner {
                                 background-color: #2D9AB7;
                                 background-image: url(../images/parallax.png);
-                                height:1220px;
+                                +height:1220px;
                                 background-attachment: fixed;
                                 background-size: cover;
                                 background-repeat: no-repeat;
